Ensure devtools eye dropper picks sRGB colors

Transform the reported color from the RenderWidetHost's display's
color space to sRGB.

This is sloppy in that the RenderWidetHost's display's color space may
have changed since when the call to CopyFromSurface was made (e.g, the
window moved to another monitor, or the display was reconfigured). The
consequence of using the wrong color space is not worse than the
original bug.

This is a temporary fix to be merged to M61. The long term fix will
require touching lots of files (at the least) and wouldn't suitable for
merge (see crbug.com/758057).

Bug: 756329
Change-Id: I5e2d2421abaf82f995b7018707ae00aca9915301
Reviewed-on: https://chromium-review.googlesource.com/627857
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: ccameron chromium <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496664}
Former-commit-id: 95fb5ee64154c4213c04c7e713dd16c1d256c5d9